--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "PG DIPLOMA IN CYBER SECURITY E-PORTFOLIO"
+  subheading: "Launching Into Cyber Scurity"
   banner: "your awesome url"
