--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "PG DIPLOMA IN CYBER SECURITY E-PORTFOLIO"
-  subheading: "Launching Into Cyber Scurity"
+  subheading: "Security and Risk Manageement"
   banner: "your awesome url"
