--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "PG DIPLOMA IN CYBER SECURITY E-PORTFOLIO"
+  heading: " CYBER SECURITY"
   subheading: "Security and Risk Manageement"
   banner: "your awesome url"
