--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: " CYBER SECURITY"
+  heading: " DIPLOMA IN CYBER SECURITY"
   subheading: "Security and Risk Manageement"
-  banner: "your awesome url"
+  banner: "E-Portfolio"
