--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: " DIPLOMA IN CYBER SECURITY"
-  subheading: "Security and Risk Manageement"
+  subheading: "Security and Risk Management"
   banner: "E-Portfolio"
